// Copyright 2025 Cofide Limited.
// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package proto.connect.cluster_service.v1alpha1;

import "proto/cluster/v1alpha1/cluster.proto";

option go_package = "github.com/cofide/cofide-api-sdk/gen/go/proto/connect/cluster_service/v1alpha1";

service ClusterService {
  rpc CreateCluster(CreateClusterRequest) returns (CreateClusterResponse);
  rpc DestroyCluster(DestroyClusterRequest) returns (DestroyClusterResponse);
  rpc GetCluster(GetClusterRequest) returns (GetClusterResponse);
  rpc ListClusters(ListClustersRequest) returns (ListClustersResponse);
  rpc UpdateCluster(UpdateClusterRequest) returns (UpdateClusterResponse);
}

message CreateClusterRequest {
  optional proto.cluster.v1alpha1.Cluster cluster = 1;
}

message CreateClusterResponse {
  optional proto.cluster.v1alpha1.Cluster cluster = 1;
}

message DestroyClusterRequest {
  optional string cluster_id = 1;
}

message DestroyClusterResponse {}

message GetClusterRequest {
  optional string cluster_id = 1;
}

message GetClusterResponse {
  optional proto.cluster.v1alpha1.Cluster cluster = 1;
}

message ListClustersRequest {
  message Filter {
    optional string name = 1;
    optional string org_id = 2;
    repeated string trust_zone_id = 3;
  }
  optional Filter filter = 1;
}

message ListClustersResponse {
  repeated proto.cluster.v1alpha1.Cluster clusters = 1;
}

message UpdateClusterRequest {
  optional proto.cluster.v1alpha1.Cluster cluster = 1;
}

message UpdateClusterResponse {
  optional proto.cluster.v1alpha1.Cluster cluster = 1;
}
